--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <footer>
         <p>© 2024 KosmosTimes. Все права защищены.</p>
-        <p>Контакты: <a href="mailto:support@kosmostimes.fun">support@kosmostimes.fun</a> | <a href="#">Discord</a></p>
+        <p>Контакты: <a href="mailto:support@kosmostimes.fun">support@kosmostimes.fun</a> | <a href="index.php">Discord</a></p>
     </footer>
 </body>
 </html>
